tests/semantic_errors/undef_var.c
int main() {
    int x;
    x = y + 5; // ERROR: y is not defined
    return x;
}